--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,12 +3,16 @@
 
     <string name="app_name">TipCalculator</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="ten_percent">10%</string>
     <string name="fifteen_percent">15%</string>
     <string name="twenty_percent">20%</string>
+    <string name="other_percent">other</string>
+    <string name="base_amount_string">Enter Bill Amount</string>
     <string name="base_amount">0</string>
-    <string name="tip_string">Tip is:</string>
+    <string name="tip_string">Total Tip:</string>
+    <string name="tip_string_per_person">Tip Per Person</string>
+    <string name="num_people_string">"Number of people:"</string>
     <string name="base_tip">$0</string>
+    <string name="rb_tip_selection">Select Tip Percentage</string>
 
 </resources>
