More features, fixes and README

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="ten_percent">10%</string>
     <string name="fifteen_percent">15%</string>
     <string name="twenty_percent">20%</string>
-    <string name="other_percent">other</string>
+    <string name="other_percent">Other</string>
     <string name="base_amount_string">Enter Bill Amount:</string>
     <string name="base_amount">0</string>
     <string name="total_bill_amount_string">Total Bill:</string>
